--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,72 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  margin:0;
+  font-family: Inter,sans-serif;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+header {
+  background-color: #f55a5a;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  color : white;
+  height : 65px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+header > img {
+  width :27px;
+  margin-right : 15px ;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+header > h1{
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+article.journal-entry{
+  display:flex;
+  justify-content: center;
+  margin : 50px 30px;
+}
+
+article.journal-entry a{
+  margin-left: 10px;
+  color: gray;
+
+}
+
+article.journal-entry .marker{
+  width:12px;
+  margin-right:5px;
+}
+
+.infos-container{
+  width : 700px;
+  margin-left: 17px;
+}
+
+
+.infos-container > h2 {
+  margin: 12px 0px;
+}
+
+.infos-container > h3 {
+  margin-bottom: 10px;
+}
+
+
+
+.main-image-container{
+  width:200px;
+  height : 168px;
+  overflow: hidden;
+  border-radius: 5px;
+  flex-shrink: 0;
+  margin-left: 19px;
+}
+
+.main-image{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
